[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/btn.png" type="Texture" id=1]
[ext_resource path="res://assets/bg.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/scripts/game_over.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/game_over.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[node name="game_over" type="Node2D"]
script = ExtResource( 4 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="bg" type="Sprite" parent="canvas"]
position = Vector2( -1.3784, -1.39191 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )
centered = false

[node name="btn_restart" type="TouchScreenButton" parent="canvas"]
position = Vector2( 105.043, 282.958 )
scale = Vector2( 0.499999, 0.499999 )
normal = ExtResource( 1 )

[node name="play_again" type="Label" parent="canvas/btn_restart"]
margin_left = -64.8099
margin_top = 234.495
margin_right = 355.19
margin_bottom = 309.495
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "PLAY AGAIN"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="last_score" type="Label" parent="canvas"]
anchor_top = -0.00278406
anchor_bottom = -0.00278406
margin_left = 1.7818
margin_top = 54.1272
margin_right = 361.782
margin_bottom = 104.127
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "LAST: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="best_score" type="Label" parent="canvas"]
margin_left = -1.7818
margin_top = 128.963
margin_right = 358.218
margin_bottom = 178.963
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "BEST: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="canvas/btn_restart" to="." method="_on_btn_restart_pressed"]
